--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "framer-motion": "^11.5.4",
+    "lucide-react": "^0.441.0",
     "next": "14.2.11",
     "nodemailer": "^6.9.15",
     "react": "^18",
