--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@splinetool/react-spline": "^4.0.0",
     "chart.js": "^4.4.4",
     "framer-motion": "^11.5.4",
     "lucide-react": "^0.441.0",
