--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,8 @@
 
 # production
 /build
-
-
+public/images/Spline-0.12.5.win.exe
+public/images/mongosh-2.3.1-win32-x64/mongosh-2.3.1-win32-x64/bin/mongosh.exe
 # misc
 .DS_Store
 *.pem
