--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "chart.js": "^4.4.4",
     "framer-motion": "^11.5.4",
     "lucide-react": "^0.441.0",
-    "next": "14.2.11",
+    "next": "^14.2.24",
     "nodemailer": "^6.9.15",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
