--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emailjs/browser": "^4.4.1",
     "@next/font": "^14.2.13",
     "@splinetool/react-spline": "^4.0.0",
+    "@vercel/blob": "^2.0.0",
     "chart.js": "^4.4.4",
     "framer-motion": "^12.23.0",
     "lucide-react": "^0.441.0",
